feat: Add Power BI API client and deployment scripts for Microsoft Fabric
- Implemented PowerBIAPIClient in powerbi_api.py for interacting with Power BI APIs.
- Created provision_fabric_items.ps1 and provision_fabric_items.sh scripts for deploying Microsoft Fabric items.
- Added requirements.txt for necessary Python dependencies.
- Enhanced error handling and logging in deployment scripts.
- Included detailed documentation and usage examples in scripts.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,19 +8,19 @@
             "name": "UDFF: fabric deployment",
             "type": "debugpy",
             "request": "launch",
-            "program": "infra/deploy/fabric/create_fabric_items.py",
+            "program": "infra/scripts/fabric/create_fabric_items.py",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "args": [
                 "--capacityName",
-                "alguadam"
+                "fcudffzsysa"
             ]
         },
         {
             "name": "UDFF: fabric examples",
             "type": "debugpy",
             "request": "launch",
-            "program": "infra/deploy/fabric/fabric_api_examples.py",
+            "program": "infra/scripts/fabric/fabric_api_examples.py",
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}",
             "args": [
