--- a/.github/workflows/azd-ai-template-validation.yml
+++ b/.github/workflows/azd-ai-template-validation.yml
@@ -1,3 +1,4 @@
+name: AZD AI Template validation
 # Run when commits are pushed to pre-deploy-alguadam
 on:
   workflow_dispatch:
@@ -5,9 +6,7 @@ on:
     # Run when commits are pushed to mainline branch (main or master)
     # Set this to the mainline branch you are using
     branches:
-      - main
-      - pre-deploy
-      - pre-deploy-alguadam
+      - "*"
 
 # Set up permissions for deploying with secretless Azure federated credentials
 # https://learn.microsoft.com/en-us/azure/developer/github/connect-from-azure?tabs=azure-portal%2Clinux#set-up-azure-login-with-openid-connect-authentication
