--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,8 +4,7 @@
     "features": {
         "ghcr.io/devcontainers/features/azure-cli:1": {
             "version": "latest",
-            "installBicep": true,
-            "installAzd": true
+            "installBicep": true
         },
         "ghcr.io/devcontainers/features/git:1": {
             "version": "latest"
@@ -15,7 +14,8 @@
         },
         "ghcr.io/devcontainers/features/powershell:1": {
             "version": "latest"
-        }
+        },
+        "ghcr.io/azure/azure-dev/azd:latest": {}
     },
     "customizations": {
         "vscode": {
