feat: Update provisioning script to support fabric administrators
- Changed script name from UDFF to UDFWF in comments and examples.
- Added support for specifying fabric administrators via command line and environment variable.
- Implemented JSON parsing for fabric administrators using jq.
- Enhanced error handling and logging for fabric admin provisioning.

chore: Add bug report and feature request templates

- Created a bug report template to streamline issue reporting.
- Created a feature request template to facilitate suggestions for new features.

ci: Implement CI/CD workflow for Azure

- Set up CI/CD pipeline for Azure deployments.
- Added steps for Bicep static analysis, validation, and deployment.
- Integrated Python environment setup and execution of fabric provisioning script.

feat: Implement Microsoft Graph API client

- Developed a Graph API client for user and service principal lookups.
- Included authentication management and error handling.
- Added methods for resolving principals by UPN, object ID, and application ID.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,20 +20,21 @@
     "customizations": {
         "vscode": {
             "extensions": [
+                "GitHub.copilot-chat",
+                "GitHub.copilot",
+                "github.vscode-github-actions",
+                "ms-azuretools.azure-dev",
+                "ms-azuretools.vscode-azurecli",
+                "ms-azuretools.vscode-bicep",
+                "ms-python.black-formatter",
                 "ms-python.python",
                 "ms-python.vscode-pylance",
-                "ms-python.black-formatter",
-                "ms-vscode.vscode-json",
-                "ms-vscode.powershell",
-                "ms-azuretools.vscode-azurecli",
-                "ms-azuretools.azure-dev",
-                "ms-azuretools.vscode-bicep",
-                "redhat.vscode-yaml",
-                "GitHub.copilot",
-                "GitHub.copilot-chat",
                 "ms-toolsai.jupyter",
                 "ms-toolsai.vscode-jupyter-cell-tags",
-                "ms-toolsai.vscode-jupyter-slideshow"
+                "ms-toolsai.vscode-jupyter-slideshow",
+                "ms-vscode.powershell",
+                "ms-vscode.vscode-json",
+                "redhat.vscode-yaml"
             ],
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
