fix: add environment context to validation and build jobs in workflows

--- a/.github/workflows/azd-ai-template-validation.yml
+++ b/.github/workflows/azd-ai-template-validation.yml
@@ -18,6 +18,7 @@ jobs:
   validate:
     runs-on: ubuntu-latest
     name: Validation steps
+    environment: 'udfwf-validate'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
