--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -30,7 +30,7 @@ env:
   AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
   AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
   AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
-  AZURE_ENV_NAME_DEV: "udfwfsa-dev"
+  AZURE_ENV_NAME_DEV: ${{ vars.AZURE_ENV_NAME_DEV }}
   AZURE_RESOURCE_GROUP_NAME_DEV: "rg-udfwfsa-dev"
   AZURE_FABRIC_WORKSPACE_NAME_DEV: "Unified Data Foundation with Fabric workspace (dev)"
 
