feat: add support for Fabric administrators by object ID in provisioning script

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -130,7 +130,8 @@ jobs:
           pwsh ./provision_fabric_items.ps1 \
             -FabricCapacityName '${{ steps.bicep-deploy.outputs.AZURE_FABRIC_CAPACITY_NAME }}' \
             -FabricWorkspaceName '${{ env.AZURE_FABRIC_WORKSPACE_NAME_DEV }}' \
-            -FabricAdmins '${{ steps.bicep-deploy.outputs.AZURE_FABRIC_ADMIN_MEMBERS }}'
+            -FabricAdmins '${{ steps.bicep-deploy.outputs.AZURE_FABRIC_ADMIN_MEMBERS }}' \
+            -FabricAdminsByObjectId '[\"47369fa5-b1de-4e63-b4f0-5fac0ab317ce\"]'
 
           echo "✅ Fabric items provisioning completed"
 
