fix: correct environment variable references for development setup

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -30,8 +30,8 @@ env:
   AZURE_TENANT_ID: ${{ vars.AZURE_TENANT_ID }}
   AZURE_SUBSCRIPTION_ID: ${{ vars.AZURE_SUBSCRIPTION_ID }}
   AZURE_LOCATION: ${{ vars.AZURE_LOCATION }}
-  AZURE_ENV_NAME_DEV: ${{ vars.AZURE_ENV_NAME_DEV }}
-  AZURE_RESOURCE_GROUP_NAME_DEV: "rg-udfwfsa-dev"
+  AZURE_ENV_NAME_DEV: ${{ vars.AZURE_ENV_NAME }}
+  AZURE_RESOURCE_GROUP_NAME_DEV: ${{ vars.AZURE_RESOURCE_GROUP_NAME }}
   AZURE_FABRIC_WORKSPACE_NAME_DEV: "Unified Data Foundation with Fabric workspace (dev)"
 
 jobs:
