--- a/azure.yaml
+++ b/azure.yaml
@@ -16,7 +16,13 @@ infra:
 
 hooks:
   postprovision:
-    shell: pwsh
-    run: ./infra/scripts/utils/run_python_script_fabric.ps1
-    interactive: true
-    continueOnError: false
+    windows:
+      shell: pwsh
+      run: ./infra/scripts/utils/run_python_script_fabric.ps1
+      interactive: true
+      continueOnError: false
+    posix:
+      shell: pwsh
+      run: ./infra/scripts/utils/run_python_script_fabric.ps1 -SkipPythonVirtualEnvironment
+      interactive: true
+      continueOnError: false
