--- a/.github/workflows/assign-workspace-admins.yml
+++ b/.github/workflows/assign-workspace-admins.yml
@@ -22,6 +22,7 @@ jobs:
   assign-admins:
     runs-on: ubuntu-latest
     name: Assign Workspace Administrators
+    environment: 'udfwf-admins'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
