--- a/.github/workflows/assign-workspace-admins.yml
+++ b/.github/workflows/assign-workspace-admins.yml
@@ -1,11 +1,8 @@
-name: Assign Fabric Workspace Administrators
+name: CI/CD Azure - Assign Fabric Workspace Administrators
 
 # Trigger the workflow on push to main/master or manual dispatch
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - "*"
 
 # Set up permissions for deploying with secretless Azure federated credentials
 permissions:
