--- a/azure.yaml
+++ b/azure.yaml
@@ -26,3 +26,14 @@ hooks:
       run: ./infra/scripts/utils/run_python_script_fabric.ps1 -SkipPythonVirtualEnvironment
       interactive: true
       continueOnError: false
+  postdown:
+    windows:
+      shell: pwsh
+      run: ./infra/scripts/utils/remove_python_script_fabric.ps1
+      interactive: true
+      continueOnError: false
+    posix:
+      shell: pwsh
+      run: ./infra/scripts/utils/remove_python_script_fabric.ps1 -SkipPythonVirtualEnvironment
+      interactive: true
+      continueOnError: false
