Pin package versions in requirements files for consistency

--- a/infra/scripts/fabric/requirements.txt
+++ b/infra/scripts/fabric/requirements.txt
@@ -2,17 +2,17 @@
 # For fabric_api.py, powerbi_api.py, fabric_utils.py and related Fabric deployment scripts
 
 # Azure authentication and core libraries
-azure-identity>=1.15.0
-azure-core>=1.29.0
+azure-identity==1.15.0
+azure-core==1.29.0
 
 # Azure Data Lake Storage (required by fabric_utils.py)
-azure-storage-file-datalake>=12.14.0
+azure-storage-file-datalake==12.14.0
 
 # HTTP requests
-requests>=2.31.0
+requests==2.31.0
 
 # Date/time utilities (required by powerbi_api.py and fabric_api.py)
-python-dateutil>=2.8.2
+python-dateutil==2.8.2
 
 # Standard library packages (included with Python)
 # - json (built-in)
