--- a/.github/workflows/azd-ai-template-validation.yml
+++ b/.github/workflows/azd-ai-template-validation.yml
@@ -2,6 +2,13 @@ name: AZD AI Template validation
 # Run when commits are pushed to pre-deploy-alguadam
 on:
   workflow_dispatch:
+  pull_request:
+    branches:
+      - main
+    paths:
+      - "infra/**"
+      - "azure.yaml"
+      - ".github/workflows/azd-ai-template-validation.yml"
 
 # Set up permissions for deploying with secretless Azure federated credentials
 # https://learn.microsoft.com/en-us/azure/developer/github/connect-from-azure?tabs=azure-portal%2Clinux#set-up-azure-login-with-openid-connect-authentication
