feat: Enhance scripts for UDF solution deployment and Python execution
- Rename to `remove_udf_solution.py` for removing Unified Data Foundation solution in Microsoft Fabric. Enhanced to handle default names based on environment variables in this script.
- Rename to `deploy_udf_solution.py` for deploying Unified Data Foundation solution in Microsoft Fabric. Enhanced to handle default names based on environment variables in this script.
- Created `Run-PythonScript.ps1` to streamline the execution of Python scripts with environment management.
- Removed deprecated `run_python_script_fabric.ps1` to consolidate functionality.
- Added `requirements.txt` to specify dependencies for Fabric API and related scripts.

--- a/azure.yaml
+++ b/azure.yaml
@@ -18,22 +18,22 @@ hooks:
   postprovision:
     windows:
       shell: pwsh
-      run: ./infra/scripts/utils/run_python_script_fabric.ps1
+      run: ./infra/scripts/utils/Run-PythonScript.ps1 -ScriptPath "infra/scripts/fabric/deploy_udf_solution.py"
       interactive: true
       continueOnError: false
     posix:
       shell: pwsh
-      run: ./infra/scripts/utils/run_python_script_fabric.ps1 -SkipPythonVirtualEnvironment
+      run: ./infra/scripts/utils/Run-PythonScript.ps1 -ScriptPath "infra/scripts/fabric/deploy_udf_solution.py" -SkipPythonVirtualEnvironment
       interactive: true
       continueOnError: false
   predown:
     windows:
       shell: pwsh
-      run: ./infra/scripts/utils/run_python_script_fabric_remove.ps1
+      run: ./infra/scripts/utils/Run-PythonScript.ps1 -ScriptPath "infra/scripts/fabric/remove_udf_solution.py"
       interactive: true
       continueOnError: false
     posix:
       shell: pwsh
-      run: ./infra/scripts/utils/run_python_script_fabric_remove.ps1 -SkipPythonVirtualEnvironment
+      run: ./infra/scripts/utils/Run-PythonScript.ps1 -ScriptPath "infra/scripts/fabric/remove_udf_solution.py" -SkipPythonVirtualEnvironment
       interactive: true
       continueOnError: false
