--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -117,7 +117,7 @@ jobs:
         working-directory: infra/scripts/utils
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r ../fabric/requirements.txt
+          python -m pip install -r ../../requirements.txt
 
       - name: Run Fabric Provisioning Script
         working-directory: infra/scripts/fabric
