--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -114,10 +114,9 @@ jobs:
           python-version: "3.11"
 
       - name: Install Python Dependencies
-        working-directory: infra/scripts/utils
         run: |
           python -m pip install --upgrade pip
-          python -m pip install -r ../../requirements.txt
+          python -m pip install -r requirements.txt
 
       - name: Run Fabric Provisioning Script
         working-directory: infra/scripts/fabric
