--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -126,7 +126,7 @@ jobs:
           SOLUTION_SUFFIX: ${{ steps.bicep-deploy.outputs.SOLUTION_SUFFIX }}
           AZURE_FABRIC_CAPACITY_ADMINISTRATORS: ${{ steps.bicep-deploy.outputs.AZURE_FABRIC_CAPACITY_ADMINISTRATORS }}
           # Optional environment variables from GitHub variables
-          FABRIC_WORKSPACE_NAME: ${{ vars.FABRIC_WORKSPACE_NAME }}
+          #FABRIC_WORKSPACE_NAME: ${{ vars.FABRIC_WORKSPACE_NAME }}
           FABRIC_WORKSPACE_ADMINISTRATORS: ${{ vars.FABRIC_WORKSPACE_ADMINISTRATORS }}
         run: |
           echo "Running UDF fabric provisioning script..."
