--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,8 @@
 {
     "name": "Unified Data Foundation with Fabric",
-    "image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+    "build": {
+        "dockerfile": "Dockerfile"
+    },
     "features": {
         "ghcr.io/devcontainers/features/azure-cli:1": {
             "version": "latest",
