--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -19,6 +19,7 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: ['3.10', '3.11', '3.12']
 
@@ -34,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage requests azure-identity
+          pip install coverage requests azure-identity azure-core
 
       - name: Run Fabric API tests
         working-directory: infra/scripts/fabric
@@ -57,6 +58,7 @@ jobs:
   coverage-report:
     runs-on: ubuntu-latest
     needs: test
+    if: always()
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -69,7 +71,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage requests azure-identity
+          pip install coverage requests azure-identity azure-core
 
       - name: Run all tests with coverage
         run: |
