--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage requests azure-identity azure-core
+          pip install coverage requests azure-identity azure-core azure-storage-file-datalake
 
       - name: Run Fabric API tests
         working-directory: infra/scripts/fabric
@@ -71,7 +71,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage requests azure-identity azure-core
+          pip install coverage requests azure-identity azure-core azure-storage-file-datalake
 
       - name: Run all tests with coverage
         run: |
