--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -40,19 +40,19 @@ jobs:
       - name: Run Fabric API tests
         working-directory: infra/scripts/fabric
         run: |
-          python -m coverage run --source=fabric_api,graph_api,powerbi_api -m unittest discover -s . -p "test_*.py" -v
+          python -m coverage run --include="fabric_api.py,graph_api.py,powerbi_api.py" -m unittest discover -s . -p "test_*.py" -v
           python -m coverage report --fail-under=80
 
       - name: Run Databricks tests
         working-directory: infra/scripts/databricks
         run: |
-          python -m coverage run --source=create_databricks_items_maag -m unittest discover -s . -p "test_*.py" -v
+          python -m coverage run --include="create_databricks_items_maag.py" -m unittest discover -s . -p "test_*.py" -v
           python -m coverage report --fail-under=75
 
       - name: Run Fabric Utility tests
         working-directory: src/fabric
         run: |
-          python -m coverage run --source=util_replace_lakhouse_name,util_replace_workspace_name -m unittest discover -s . -p "test_*.py" -v
+          python -m coverage run --include="util_replace_lakhouse_name.py,util_replace_workspace_name.py" -m unittest discover -s . -p "test_*.py" -v
           python -m coverage report --fail-under=95
 
   coverage-report:
@@ -77,19 +77,19 @@ jobs:
         run: |
           # Run Fabric API tests
           cd infra/scripts/fabric
-          python -m coverage run --source=fabric_api,graph_api,powerbi_api -m unittest discover -s . -p "test_*.py"
+          python -m coverage run --include="fabric_api.py,graph_api.py,powerbi_api.py" -m unittest discover -s . -p "test_*.py"
           cp .coverage ../../../.coverage.fabric
           cd ../../..
           
           # Run Databricks tests
           cd infra/scripts/databricks
-          python -m coverage run --source=create_databricks_items_maag -m unittest discover -s . -p "test_*.py"
+          python -m coverage run --include="create_databricks_items_maag.py" -m unittest discover -s . -p "test_*.py"
           cp .coverage ../../../.coverage.databricks
           cd ../../..
           
           # Run Utility tests
           cd src/fabric
-          python -m coverage run --source=util_replace_lakhouse_name,util_replace_workspace_name -m unittest discover -s . -p "test_*.py"
+          python -m coverage run --include="util_replace_lakhouse_name.py,util_replace_workspace_name.py" -m unittest discover -s . -p "test_*.py"
           cp .coverage ../../.coverage.utils
           cd ../..
 
