fix: Handle unresolved azd parameters in CI/CD and update QA guide

--- a/.github/workflows/azure-dev.yml
+++ b/.github/workflows/azure-dev.yml
@@ -72,7 +72,9 @@ jobs:
             --template-file infra/main.json \
             --parameters infra/main.parameters.json \
             --parameters solutionName=${{ env.AZURE_ENV_NAME_DEV }} \
-            --parameters location=${{ env.AZURE_LOCATION }} || true
+            --parameters location=${{ env.AZURE_LOCATION }} \
+            --parameters existingFabricCapacityName="${{ vars.AZURE_EXISTING_FABRIC_CAPACITY_NAME || '' }}" \
+            --parameters existingFabricWorkspaceName="${{ vars.AZURE_EXISTING_FABRIC_WORKSPACE_NAME || '' }}" || true
           echo "✅ Bicep template validation completed"
 
   deploy-dev:
@@ -105,7 +107,9 @@ jobs:
             parameters-file: ./infra/main.parameters.json
             parameters: |
                 {
-                  "solutionName": "${{ env.AZURE_ENV_NAME_DEV }}"
+                  "solutionName": "${{ env.AZURE_ENV_NAME_DEV }}",
+                  "existingFabricCapacityName": "${{ vars.AZURE_EXISTING_FABRIC_CAPACITY_NAME || '' }}",
+                  "existingFabricWorkspaceName": "${{ vars.AZURE_EXISTING_FABRIC_WORKSPACE_NAME || '' }}"
                 }
 
       - name: Setup Python Environment
